--- a/index.html
+++ b/index.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/media.css" />
+  </head>
+  <body>
+    <header>
+    <div class="container1">
+        <div class="flex-container">
+            <button class="menu-btn">&#9776;</button>
+        <nav>
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About us</a>
+            </li>
+            <li>
+              <a href="#">our services</a>
+            </li>
+            <li>
+              <a href="#">tour packages</a>
+            </li>
+          </ul>
+        </nav>
+      </div>        
+      </div>
+
+        <div class="bg-image">
+         <h1>Discover Greece</h1>
+        <h4>TRAVEL WITH UNIQUE EXPERIENCE</h4></div>
+
+    </header>
+
+    <section>
+      <div class="container flex">
+        <div class="left_side">
+          <div class="card">
+            <h4>discover</h4>
+            <h2>Our Hot Services</h2>
+            <p>
+              We hope you can visit and ths beautiful places with your friend
+              and favorite So you can share your feedback to us
+            </p>
+          </div>
+        </div>
+        <div class="right_side">
+          <div class="card">
+            <h4>discover</h4>
+            <h2>Our Hot Services</h2>
+            <p>
+              We hope you can visit and ths beautiful places with your friend
+              and favorite So you can share your feedback to us
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/Rectangle 2.jpg" alt="card" />
+            <h3>FLIGHT BOOKING</h3>
+            <p>
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/Rectangle 3.jpg" alt="card" />
+            <h3>FLIGHT BOOKING</h3>
+            <p>
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/Rectangle 4.jpg" alt="card" />
+            <h3>FLIGHT BOOKING</h3>
+            <p>
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/Rectangle 5.jpg" alt="card" />
+            <h3>FLIGHT BOOKING</h3>
+            <p>
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/Rectangle 6.jpg" alt="card" />
+            <h3>FLIGHT BOOKING</h3>
+            <p>
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/Rectangle 7.jpg" alt="card" />
+            <h3>FLIGHT BOOKING</h3>
+            <p>
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
