--- a/index.html
+++ b/index.html
@@ -8,27 +8,21 @@
   </head>
   <body>
     <header>
-    <div class="container1">
-        <div class="flex-container">
-            <button class="menu-btn">&#9776;</button>
-        <nav>
-          <ul>
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li>
-              <a href="#">About us</a>
-            </li>
-            <li>
-              <a href="#">our services</a>
-            </li>
-            <li>
-              <a href="#">tour packages</a>
-            </li>
-          </ul>
-        </nav>
-      </div>        
-      </div>
+    <header>
+  <div class="container1">
+    <div class="flex-container">
+
+      <button class="menu-btn">&#9776;</button>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Our services</a></li>
+          <li><a href="#">Tour packages</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 
         <div class="bg-image">
          <h1>Discover Greece</h1>
